# python-project-52

./: .gitignore  Makefile  README.md  build.sh  db.sqlite3  pyproject.toml
.github/workflows/: pyci.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: asgi.py  mixins.py  settings.py  urls.py  views.py  wsgi.py
task_manager/fixtures/: labels.json  statuses.json  tasks.json  users.json
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py
task_manager/templates/: base.html  create.html  delete.html  index.html  layout.html  login.html  update.html
task_manager/templates/labels/: label_create.html  label_delete.html  label_update.html  labels.html
task_manager/templates/statuses/: status_create.html  status_delete.html  status_update.html  statuses.html
task_manager/templates/tasks/: task.html  task_create.html  task_delete.html  task_update.html  tasks.html
task_manager/templates/users/: user_create.html  user_delete.html  user_update.html  users.html
task_manager/users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py  0002_alter_user_groups_alter_user_is_active_and_more.py
